# My-Grafics-

./: 1.cpp  CMakeLists.txt  My Graphik.cpp  README  TXLib.h  a.out  doctest.h  functions.cpp  functions.hpp  main.txt  test.cpp
-/html/: _c_make_lists_8txt.html  _my_01_graphik_8cpp.html  _my_01_graphik_8cpp_source.html  _t_x_lib_8h.html  annotated.html  classes.html  classtx_auto_lock-members.html  files.html  (+36 more)
My Graphik/: My Graphik.cbp
TX/: README.txt  TXLib Help.chm  Обновление TXLib.lnk
html/: _c_make_lists_8txt.html  _my_01_graphik_8cpp.html  _t_x_lib_8h.html  annotated.html  classes.html  classtx_auto_lock-members.html  classtx_auto_lock.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_a.html  globals_c.html  globals_defs.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_v.html  globals_vars.html  globals_w.html  globals_z.html  group___dialogs.html  group___drawing.html  group___misc.html  group___mouse.html  group___technical.html  index.html  menudata.js  modules.html  struct__tx__auto__func__-members.html  (+5 more)
latex/: _c_make_lists_8txt.tex  _my_01_graphik_8cpp.tex  _t_x_lib_8h.tex  annotated.tex  classtx_auto_lock.tex  files.tex  group___dialogs.tex  group___drawing.tex  group___misc.tex  group___mouse.tex  group___technical.tex  modules.tex  refman.tex  struct__tx__auto__func__.tex  structtx_dialog.tex  structtx_dialog_1_1_layout.tex
(+346 files in other folders)
